--- a/amplify.yml
+++ b/amplify.yml
@@ -1,20 +1,20 @@
 version: 1
-applications:
-  - frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm install  # Install dependencies
-        build:
-          commands:
-            - npm run build  # Build Next.js app
-      artifacts:
-        baseDirectory: .next
-        files:
-          - '**/*'  # Deploy all files from the .next directory
-      cache:
-        paths:
-          - node_modules/**  # Cache dependencies
-      environment:
-        variables:
-          NEXT_PUBLIC_TEST_VAR: "HELLO"
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm ci --cache .npm --prefer-offline
+    build:
+      commands:
+        - npm run build
+  artifacts:
+    baseDirectory: .next
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - .next/cache/**/*
+      - .npm/**/*
+  environment:
+    variables:
+      NEXT_PUBLIC_TEST_VAR: "test"
