--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
