--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
